updated english files

--- a/translations/en/content/cultures/culture.json
+++ b/translations/en/content/cultures/culture.json
@@ -16,7 +16,7 @@
                 "VERB_COLLECT": "$Collect <smallcaps>[{SETTING:kbcollectall}]</smallcaps> ",
                 "VERB_RUNNING": "Running...",
                 "VERB_ACCEPT": "$Accept <smallcaps>[{SETTING:kbcollectall}]</smallcaps> ",
-                "UI_CLICK_TO_NAME": "[click to name] ",
+                "UI_CLICK_TO_NAME": "[click to name]",
                 "UI_RELOAD": "Reload",
                 "UI_CONTINUE": "Continue",
                 "UI_RESUME": "Resume",
@@ -24,10 +24,10 @@
                 "UI_RESTARTSURE": "DEFINITELY RESTART?",
                 "UI_BROWSE": "Browse Files",
                 "UI_SAVEEXIT": "Save & Exit",
-                "UI_OPTIONS": "Options\n<size=60%><alpha=#99>[ESC]",
-                "UI_CORRUPTSAVE": "Current Session Corrupted",
-                "UI_CORRUPTDESC": "Saving halted to protect your saved data.\n A pair of error report save files (before & after) have been created. If you continue without saving then it MAY recover, but we recommend reloading.",
-                "UI_CORRUPTCONTINUE": "Continue play",
+                "UI_OPTIONS": "$Options\n<size=60%><alpha=#99><uppercase>[{SETTING:kbabort}]",
+                "UI_CORRUPTSAVE": "CAN'T SAVE...",
+                "UI_CORRUPTDESC": "Something went wrong when we tried to save your game. It may be okay next time we try. Hit CONTINUE to keep going, if you want to take the chance it'll be okay, or  RELOAD LAST SAVE to return to your last good save.",
+                "UI_CORRUPTCONTINUE": "Continue",
                 "UI_CORRUPTRELOAD": "Reload last save",
                 "UI_CORRUPTABANDON": "Abandon session & quit",
                 "UI_OPTIONSTITLE": "Options",
@@ -51,6 +51,7 @@
                 "UI_SNAP_1": "1 Card",
                 "UI_SNAP_2": "½ Card",
                 "UI_SNAP_3": "¼ Card",
+                "UI_SNAP_4": "1/8 Card",
                 "UI_KB_STARTRECIPE": "Start Recipe",
                 "UI_KB_COLLECTALL": "Collect Results",
                 "UI_KB_PAUSE": "Pause",
@@ -78,7 +79,7 @@
                 "UI_KNOWN_LINUX": "KNOWN LINUX ISSUES",
                 "UI_KNOWN_LINUX_1": "- Keystrokes may register twice when naming your characters. This is a Unity issue; hoping for a fix!",
                 "UI_PURGE_SAVE": "PURGE SAVE",
-                "UI_DLC_AND_MODS": "THE INVISIBLE SERAPEUM",
+                "UI_DLC_AND_MODS": "The Sixth History",
                 "UI_LEAVE_GAME": "LEAVE",
                 "UI_DLC": "OTHER LIVES",
                 "UI_DLC_PURCHASE": "Purchase",
@@ -90,14 +91,26 @@
                 "UI_ALTERNATIVE_STARTS_BLURB": "DLC and mods can open alternative beginnings to you.",
                 "UI_INSTALLED_MODS": "Installed mods",
                 "UI_MODS_INTRODUCTION": "Expansions and mods allow you to play new roles - or change the game in other ways.",
-                "UI_MODS_INTRODUCTION_STEAM": "Find more mods at the <link=\"https://steamcommunity.com/app/718670/workshop/\"><color=#ccd2e8><b><u>Invisible Serapeum</u></b></color></link>.",
+                "UI_MODS_INTRODUCTION_STEAM": "Find more mods in the <link=\"https://steamcommunity.com/app/718670/workshop/\"><color=#ccd2e8><b><u>Sixth History</u></b></color></link>.",
                 "UI_MODS_NO_MODS": "No mods are currently installed.",
                 "UI_CREDITS": "WHO IS RESPONSIBLE?",
                 "UI_BEGIN_GAME": "BEGIN GAME",
                 "UI_INCOMPATIBLE_SAVE": "INCOMPATIBLE SAVE",
                 "UI_INCOMPATIBLE_SAVE_1": "You have an ANTIQUE and BLASPHEMOUS save file from a previous build! Purge it to continue.",
                 "UI_CORRUPTED_SAVE_TITLE": "CORRUPTED SAVE",
-                "UI_CORRUPTED_SAVE_DESC": "Regrettably, we couldn't recover your save. Click here to see your backup save files - one may still be usable.",
+                "UI_CORRUPTED_SAVE_DESC": "Something horrible has happened to your save file.\n\nYou can purge it and continue, but your progress will be gone.",
+                "UI_SUSPICIOUS_SAVE_TITLE": "A PECULIAR SAVE?",
+                "UI_SUSPICIOUS_SAVE_DESC": "Something strange has happened to your save file.\n\nPerhaps your mods require a reconfiguration to load it properly.\n\nYou can try your chances and start the game anyway, or...",
+                "UI_RESTORE_BACKUP_SAVE": "CLICK HERE TO TRY RESTORING A BACKUP SAVE",
+                "UI_RESTORING_SAVE_FAILED_TITLE": "RESTORING FAILED",
+                "UI_RESTORING_SAVE_FAILED_DESC": "It seems that you either have no backups, or they are no better than your latest save.\n\nPlease send your save.json and Player.log files to support@weatherfactory.biz, so we can determine what the problem is.\n\nClick here to open the folder that contains the files.",
+                "UI_UHO_TITLE": "UH O",
+                "UI_UHO_DESCRIPTION": "\n<b>Something horrible has happened: a wakeful Worm, a loop-bound choice, a mangled Name, a wind from Nowhere.</b>\n\nPlease send us your log files at support@weatherfactory.biz, and we'll try to work out what's going wrong.\n\nYou can find your log files by clicking the button below -  player.log and save.json are the important ones.\n\n<i>(\"It is a capital mistake to theorise before one has data.\"  - Conan Doyle, 'A Scandal in Bohemia')</i>",
+                "UI_UHO_MODS_TITLE": "MODS!",
+                "UI_UHO_MODS_DESCRIPTION": "You have mods enabled! First, please disable all mods to see if that fixes your problem.\n\nIf you send a bug report, please specify any mods you have installed.\n\nIF YOU DON'T, THE CAT WILL BE EXTREMELY SAD.",
+                "UI_SAFEMODE_TITLE": "SAFE MODE",
+                "UI_SAFEMODE_DESCRIPTION": "The game crashed on startup. We've disabled all mods to put it in safe mode.\n\nYou can try restoring your previous mod configuration, or purge and forget.",
+                "UI_RESTORE": "RESTORE",
                 "UI_OPTIONS_FE": "Settings",
                 "UI_MANAGE_SAVES": "MANAGE SAVES",
                 "UI_MANAGE_SAVES_TITLE": "Manage Saves and Backups",
@@ -111,9 +124,12 @@
                 "UI_PLAYLEGACY_PURGE": "PLAY LEGACY",
                 "UI_PLAYLEGACY_KEEP": "KEEP SAVE",
                 "UI_LANGUAGE": "Language",
+                "UI_ACHIEVEMENTS": "Collection",
+                "UI_HIDDEN_ACHIEVEMENT_TITLE": "{0} hidden achievements remaining",
+                "UI_HIDDEN_ACHIEVEMENT_DESCRIPTION": "Details for each achievement will be revealed once unlocked",
                 "UI_VERSION_NEWS": "News",
                 "UI_VERSION_NEWS_INTRO": "Welcome to Cultist Simulator. Follow us at www.weatherfactory.biz, and at @factoryweather on Twitter, to learn about upcoming updates and other projects in the Secret Histories setting. If you find a bug or the game is crashing on you, do let us know at support@weatherfactory.biz .\n\nthank you!\n\n- Lottie and Alexis",
-                "UI_VERSION_NEWS_TEXT": "v2020.10.b.2, Reverted recent disastrous Russian loc update. Apologies. \n\n ",
+                "UI_VERSION_NEWS_TEXT": "...",
                 "UI_CREDITS_TITLE": "Credits",
                 "UI_RESPONSIBILITIES": "RESPONSIBILITIES",
                 "UI_BROWSE_SAVES": "VIEW SAVE FILE",
@@ -148,6 +164,7 @@
                 "UI_CANTPUT": "I can't put that there -",
                 "UI_ASPECTSREQUIRED": "That card must have at least one of these aspects: ",
                 "UI_ASPECTSFORBIDDEN": "A card may not go here if it has any of these aspects: ",
+                "UI_ASPECTSESSENTIAL": "A thing may only go here if it has all of these aspects: ",
                 "UI_OR": ", or ",
                 "UI_FULLSTOP": ".",
                 "UI_HINT": "Hint:",
@@ -158,7 +175,8 @@
                 "UI_OPT_GRAPHICS_LEVEL": "Beauty",
                 "GRAPHICS_LEVEL_1": "Acceptable",
                 "GRAPHICS_LEVEL_2": "Admirable",
-                "GRAPHICS_LEVEL_3": "Glorious"
+                "GRAPHICS_LEVEL_3": "Glorious",
+                "UI_FONT_SIZE": "Font Size"
             }
         }
     ]
