--- a/translations/en/loc/decks/events.json
+++ b/translations/en/loc/decks/events.json
@@ -331,7 +331,7 @@
                 "strategy.dreams.concealed",
                 "strategy.downtime.concealed"
             ],
-            "defaultcard": "strategy.downtime",
+            "defaultcard": "strategy.downtime.concealed",
             "resetonexhaustion": true
         },
         {
@@ -345,7 +345,7 @@
                 "strategy.dreams.concealed",
                 "strategy.downtime.concealed"
             ],
-            "defaultcard": "strategy.downtime",
+            "defaultcard": "strategy.downtime.concealed",
             "resetonexhaustion": true
         },
         {
@@ -359,7 +359,7 @@
                 "strategy.dreams.concealed",
                 "strategy.downtime.concealed"
             ],
-            "defaultcard": "strategy.downtime",
+            "defaultcard": "strategy.downtime.concealed",
             "resetonexhaustion": true
         },
         {
@@ -373,7 +373,7 @@
                 "strategy.dreams.concealed",
                 "strategy.downtime.concealed"
             ],
-            "defaultcard": "strategy.downtime",
+            "defaultcard": "strategy.downtime.concealed",
             "resetonexhaustion": true
         },
         {
