--- a/translations/en/loc/elements/spirits.json
+++ b/translations/en/loc/elements/spirits.json
@@ -29,7 +29,7 @@
                 "spiritsicknessprotector": 1,
                 "remnant": 1
             },
-            "description": "The growths of the Wood have encompassed the corpse's organs, swelled its skull like a gourd, twined around its heart. It eyes are moist with cunning, and it moves with jerky puppet grace. Its bones are rotten wood, and soon it will take root, but until then it will be a swift and subtle servant.",
+            "description": "The growths of the Wood have encompassed the corpse's organs, swelled its skull like a gourd, twined around its heart. Its eyes are moist with cunning, and it moves with jerky puppet grace. Its bones are rotten wood, and soon it will take root, but until then it will be a swift and subtle servant.",
             "xtriggers": {
                 "renewburgeoning": "spirit_wintera_moth",
                 "killsummoned": "influencemoth",
