--- a/translations/en/loc/legacies/DLC_EXILE_Exile_legacy.json
+++ b/translations/en/loc/legacies/DLC_EXILE_Exile_legacy.json
@@ -23,271 +23,248 @@
             ],
             "startingverbid": "use",
             "newstart": true,
-            "tablecoverimage": "table_leather_exile"
+            "tablecoverimage": "table_leather_exile",
+            "comments": "ending-based variations are identical and inherit mostly everything, except for selection screen text"
         },
         {
             "id": "exile.obscurityvictorya",
+            "$derives": "exile",
             "label": "The Exile",
-            "family": "exile",
             "description": "What if it had been different? In another history, did I reap greater rewards?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "obscurityvictorya",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         },
         {
             "id": "exile.obscurityvictoryb",
-            "label": "The Exile",
-            "family": "exile",
+            "$derives": "exile",
             "description": "What if it had been different? In another history, did I reap even greater rewards?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "obscurityvictoryb",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         },
         {
             "id": "exile.obscurityvictoryc",
-            "label": "The Exile",
-            "family": "exile",
+            "$derives": "exile",
             "description": "What if it had been different? In another history, did I rise higher?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "obscurityvictoryc",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         },
         {
             "id": "exile.obscurityvictoryafoeslain",
+            "$derives": "exile",
             "label": "The Exile",
-            "family": "exile",
             "description": "What if it had been different? In another history, did I reap greater rewards?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "obscurityvictoryafoeslain",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         },
         {
             "id": "exile.obscurityvictorybfoeslain",
+            "$derives": "exile",
             "label": "The Exile",
-            "family": "exile",
             "description": "What if it had been different? In another history, did I reap even greater rewards?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "obscurityvictorybfoeslain",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         },
         {
             "id": "exile.obscurityvictorycfoeslain",
+            "$derives": "exile",
             "label": "The Exile",
-            "family": "exile",
             "description": "What if it had been different? In another history, did I rise higher?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "obscurityvictorycfoeslain",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         },
         {
             "id": "exile.foecaughtup",
+            "$derives": "exile",
             "label": "The Exile",
-            "family": "exile",
             "description": "What if it had been different? In another history, did I survive?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "foecaughtup",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         },
         {
             "id": "exile.ascensioncolonel",
+            "$derives": "exile",
             "label": "The Exile",
-            "family": "exile",
             "description": "What if it had been different? In another history, did I find something more like freedom?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "ascensioncolonel",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         },
         {
             "id": "exile.ascensionlionsmith",
+            "$derives": "exile",
             "label": "The Exile",
-            "family": "exile",
             "description": "What if it had been different? In another history, did I find something more like peace?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "ascensionlionsmith",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         },
         {
             "id": "exile.ascensionwolf",
+            "$derives": "exile",
             "label": "The Exile",
-            "family": "exile",
             "description": "What if it had been different? In another history, was I also a destroyer?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "ascensionwolf",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         },
         {
             "id": "exile.victoryvelvet",
+            "$derives": "exile",
             "label": "The Exile",
-            "family": "exile",
             "description": "What if it had been different? In another history, did I meet my maker?",
-            "startdescription": "Sunset. Time to go.",
-            "image": "exile",
-            "effects": {
-                "decade.stolen": 7,
-                "year.stolen": 7,
-                "ticket.train": 1,
-                "trace": 7
-            },
             "fromending": "victoryvelvet",
             "availableWithoutEndingMatch": false,
-            "statusbarelements": [
-                "obscurity",
-                "comfort",
-                "damage.exile",
-                "lifespan.stolen"
-            ],
-            "startingverbid": "use",
-            "tablecoverimage": "table_leather_exile"
+            "newstart": false,
+            "excludesOnEnding": [
+                "exile.obscurityvictorya",
+                "exile.obscurityvictoryb",
+                "exile.obscurityvictoryc",
+                "exile.obscurityvictoryafoeslain",
+                "exile.obscurityvictorybfoeslain",
+                "exile.obscurityvictorycfoeslain",
+                "exile.ascensioncolonel",
+                "exile.ascensionlionsmith",
+                "exile.ascensionwolf",
+                "exile.foecaughtup",
+                "exile.victoryvelvet"
+            ]
         }
     ]
 }
