--- a/translations/en/loc/recipes/2_cluesstudy.json
+++ b/translations/en/loc/recipes/2_cluesstudy.json
@@ -28,6 +28,7 @@
             "actionid": "study",
             "requirements": {
                 "lore": 1,
+                "influence": -1,
                 "healthskill": -1,
                 "alzabo": -1,
                 "prealzabo": -1
