--- a/translations/en/loc/recipes/DLC_DANCER_ecdysisclub_recipes.json
+++ b/translations/en/loc/recipes/DLC_DANCER_ecdysisclub_recipes.json
@@ -847,7 +847,7 @@
                     "expulsion": {
                         "limit": 1,
                         "filter": {
-                            "healthexhausted": 1
+                            "fatigue": 1
                         }
                     }
                 }
