--- a/translations/en/loc/recipes/long_recipes_attacks.json
+++ b/translations/en/loc/recipes/long_recipes_attacks.json
@@ -965,7 +965,7 @@
                     },
                     "forbidden": {
                         "independent": 1,
-                        "investigator": 1,
+                        "hunter": 1,
                         "romanticinterest": 1
                     }
                 }
@@ -1879,7 +1879,7 @@
                         "way": 1
                     },
                     "forbidden": {
-                        "poison.long.way": 1,
+                        "poison.way.long": 1,
                         "waystagbefore_1": 1,
                         "waystagbefore_2": 1,
                         "waystagbefore_3": 1,
