--- a/translations/en/loc/elements/fragments.json
+++ b/translations/en/loc/elements/fragments.json
@@ -23,6 +23,7 @@
             ],
             "description": "When our ancestors forged swords, taught the arts of martial movement, spoke curses on the eve of battle - all these things shared certain patterns. [Use this in a Rite with a corpse and Winter power, and the corpse will rise.]",
             "xtriggers": {
+                "subvert_to_winter": "husk",
                 "epiphany": "fragmentedgeb"
             }
         },
@@ -50,6 +51,7 @@
             ],
             "description": "This is the bone-deep story the thousandman learnt in antiquity, of blood and its exits. To speak it aloud is to hear the sword hiss. [Use this in a Rite with a corpse and Winter power, and the corpse will rise.]",
             "xtriggers": {
+                "subvert_to_winter": "husk",
                 "epiphany": "fragmentedgec"
             }
         },
@@ -78,6 +80,7 @@
             ],
             "description": "A series of mystic exercises that requires both dedication and terror. [Use this in a Rite with a corpse and Winter power, and the corpse will rise.]",
             "xtriggers": {
+                "subvert_to_winter": "husk",
                 "epiphany": "fragmentedged"
             }
         },
@@ -106,6 +109,7 @@
             ],
             "description": "The Colonel has been many things in many ages. He is blind; he is deaf; he cannot be wounded; he cannot be denied. His Names are cunning as only the very old can be.",
             "xtriggers": {
+                "subvert_to_winter": "husk",
                 "epiphany": "fragmentedgee"
             }
         },
@@ -135,6 +139,7 @@
             ],
             "description": "The Lionsmith is young by the standards of the Hours, but old by the standards of war. His Names are recent recruits, and their recitation has a savage power.",
             "xtriggers": {
+                "subvert_to_winter": "husk",
                 "epiphany": "fragmentedgef"
             }
         },
@@ -164,6 +169,7 @@
             ],
             "description": "These are the arts that ensure an ending.",
             "xtriggers": {
+                "subvert_to_winter": "husk",
                 "epiphany": "fragmentedgeg"
             }
         },
@@ -187,6 +193,9 @@
                     "actionid": "study"
                 }
             ],
+            "xtriggers": {
+                "subvert_to_winter": "husk"
+            },
             "unique": true
         },
         {
@@ -212,6 +221,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_edge": "husk",
                 "epiphany": "fragmentforgeb"
             }
         },
@@ -239,6 +249,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_edge": "husk",
                 "epiphany": "fragmentforgec"
             }
         },
@@ -267,6 +278,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_edge": "husk",
                 "epiphany": "fragmentforged"
             }
         },
@@ -295,6 +307,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_edge": "husk",
                 "epiphany": "fragmentforgee"
             }
         },
@@ -324,6 +337,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_edge": "husk",
                 "epiphany": "fragmentforgef"
             }
         },
@@ -353,6 +367,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_edge": "husk",
                 "epiphany": "fragmentforgeg"
             }
         },
@@ -376,6 +391,9 @@
                     "actionid": "study"
                 }
             ],
+            "xtriggers": {
+                "subvert_to_edge": "husk"
+            },
             "unique": true
         },
         {
@@ -401,6 +419,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_moth": "husk",
                 "epiphany": "fragmentgrailb"
             }
         },
@@ -428,6 +447,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_moth": "husk",
                 "epiphany": "fragmentgrailc"
             }
         },
@@ -456,6 +476,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_moth": "husk",
                 "epiphany": "fragmentgraild"
             }
         },
@@ -484,6 +505,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_moth": "husk",
                 "epiphany": "fragmentgraile"
             }
         },
@@ -513,6 +535,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_moth": "husk",
                 "epiphany": "fragmentgrailf"
             }
         },
@@ -542,6 +565,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_moth": "husk",
                 "epiphany": "fragmentgrailg"
             }
         },
@@ -565,6 +589,9 @@
                     "actionid": "study"
                 }
             ],
+            "xtriggers": {
+                "subvert_to_moth": "husk"
+            },
             "unique": true
         },
         {
@@ -590,6 +617,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_grail": "husk",
                 "epiphany": "fragmentheartb"
             }
         },
@@ -617,6 +645,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_grail": "husk",
                 "epiphany": "fragmentheartc"
             }
         },
@@ -645,6 +674,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_grail": "husk",
                 "epiphany": "fragmentheartd"
             }
         },
@@ -673,6 +703,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_grail": "husk",
                 "epiphany": "fragmenthearte"
             }
         },
@@ -702,6 +733,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_grail": "husk",
                 "epiphany": "fragmentheartf"
             }
         },
@@ -731,6 +763,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_grail": "husk",
                 "epiphany": "fragmentheartg"
             }
         },
@@ -754,6 +787,9 @@
                     "actionid": "study"
                 }
             ],
+            "xtriggers": {
+                "subvert_to_grail": "husk"
+            },
             "unique": true
         },
         {
@@ -997,6 +1033,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_forge": "husk",
                 "epiphany": "fragmentlanternb"
             }
         },
@@ -1024,6 +1061,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_forge": "husk",
                 "epiphany": "fragmentlanternc"
             }
         },
@@ -1052,6 +1090,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_forge": "husk",
                 "epiphany": "fragmentlanternd"
             }
         },
@@ -1080,6 +1119,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_forge": "husk",
                 "epiphany": "fragmentlanterne"
             }
         },
@@ -1109,6 +1149,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_forge": "husk",
                 "epiphany": "fragmentlanternf"
             }
         },
@@ -1138,6 +1179,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_forge": "husk",
                 "epiphany": "fragmentlanterng"
             }
         },
@@ -1161,6 +1203,9 @@
                     "actionid": "study"
                 }
             ],
+            "xtriggers": {
+                "subvert_to_forge": "husk"
+            },
             "unique": true
         },
         {
@@ -1186,6 +1231,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_lantern": "husk",
                 "epiphany": "fragmentmothb"
             }
         },
@@ -1213,6 +1259,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_lantern": "husk",
                 "epiphany": "fragmentmothc"
             }
         },
@@ -1241,6 +1288,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_lantern": "husk",
                 "epiphany": "fragmentmothd"
             }
         },
@@ -1269,6 +1317,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_lantern": "husk",
                 "epiphany": "fragmentmothe"
             }
         },
@@ -1298,6 +1347,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_lantern": "husk",
                 "epiphany": "fragmentmothf"
             }
         },
@@ -1327,6 +1377,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_lantern": "husk",
                 "epiphany": "fragmentmothg"
             }
         },
@@ -1350,6 +1401,9 @@
                     "actionid": "study"
                 }
             ],
+            "xtriggers": {
+                "subvert_to_lantern": "husk"
+            },
             "unique": true
         },
         {
@@ -1551,6 +1605,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_heart": "husk",
                 "epiphany": "fragmentwinterb"
             }
         },
@@ -1578,6 +1633,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_heart": "husk",
                 "epiphany": "fragmentwinterc"
             }
         },
@@ -1606,6 +1662,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_heart": "husk",
                 "epiphany": "fragmentwinterd"
             }
         },
@@ -1634,6 +1691,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_heart": "husk",
                 "epiphany": "fragmentwintere"
             }
         },
@@ -1663,6 +1721,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_heart": "husk",
                 "epiphany": "fragmentwinterf"
             }
         },
@@ -1692,6 +1751,7 @@
                 }
             ],
             "xtriggers": {
+                "subvert_to_heart": "husk",
                 "epiphany": "fragmentwinterg"
             }
         },
@@ -1715,6 +1775,9 @@
                     "actionid": "study"
                 }
             ],
+            "xtriggers": {
+                "subvert_to_heart": "husk"
+            },
             "unique": true
         },
         {
@@ -1734,6 +1797,7 @@
         },
         {
             "id": "prealzabo",
+            "burnTo": "prealzabo",
             "label": "Formula: Elixir Zeboim?",
             "description": "I have here a secret - a recipe of honey, asphodel, powdered ivory, and a mottled fungus that grows only where the dead are buried.",
             "aspects": {
@@ -1770,6 +1834,7 @@
         },
         {
             "id": "alzabo",
+            "burnTo": "alzabo",
             "label": "Formula: Elixir Zeboim",
             "description": "That formula which quickens the memories of decaying flesh in the bellies of the living. Such a thing could not exist without the consent of both the Flowermaker and the Elegiast... and with the assistance of one more Hour besides.",
             "comments": "RIP Gene Wolfe, 1931-2019. 'Some are haunted by ghosts. I am haunted by stories.'",
