--- a/translations/en/loc/verbs/main_verbs.json
+++ b/translations/en/loc/verbs/main_verbs.json
@@ -53,7 +53,8 @@
                     "tutor": 1,
                     "language": 1,
                     "legacyplotitem": 1
-                }
+                },
+                "forbidden": { "contentment": 1 }
             }
         },
         {
@@ -111,11 +112,6 @@
             "label": "Mansus Portal",
             "description": "A Mansus transition",
             "icon": "map"
-        },
-        {
-            "id": "pickup",
-            "label": "Pickup",
-            "description": "offers cards via output slots"
         }
     ]
 }
